--- a/sendCoupon.html
+++ b/sendCoupon.html
@@ -116,8 +116,8 @@
                             <div id="senderPhone-feedback" class="form-text text-muted text-end"></div>
                         </div>
 
-                        <div class="col-md-2"><label class="form-label">배너 이미지 삽입(옵션)</label></div>
-                        <div class="col-md-10"><input type="file" class="form-control"></div>
+                        <div class="col-md-2"><label for="bannerImage" class="form-label">배너 이미지 삽입(옵션)</label></div>
+                        <div class="col-md-10"><input type="file" class="form-control" id="bannerImage"></div>
                     </div>
                 </div>
             </div>
@@ -127,8 +127,8 @@
                 <!-- MMS 이미지 미리보기 -->
                 <div class="card">
                     <div class="card-title">MMS 이미지 미리보기</div>
-                    <div class="d-flex justify-content-center align-items-center" style="height: 400px; background-color: #f8f9fa;">
-                        <p class="text-muted">이미지 미리보기 영역</p>
+                    <div class="d-flex justify-content-center align-items-center p-3" style="background-color: #f8f9fa;">
+                        <img src="images/sample-mms.png" alt="MMS 미리보기" class="img-fluid" style="max-height: 400px; object-fit: contain;">
                     </div>
                 </div>
             </div>
