--- a/sendCoupon.html
+++ b/sendCoupon.html
@@ -116,8 +116,13 @@
                             <div id="senderPhone-feedback" class="form-text text-muted text-end"></div>
                         </div>
 
-                        <div class="col-md-2"><label for="bannerImage" class="form-label">배너 이미지 삽입(옵션)</label></div>
-                        <div class="col-md-10"><input type="file" class="form-control" id="bannerImage"></div>
+                        <div class="col-md-2">
+                            <div class="form-check">
+                                <input class="form-check-input" type="checkbox" id="useBannerImage">
+                                <label class="form-check-label" for="useBannerImage">배너 삽입(옵션)</label>
+                            </div>
+                        </div>
+                        <div class="col-md-10"><input type="file" class="form-control" id="bannerImage" disabled></div>
                     </div>
                 </div>
             </div>
