--- a/sendCoupon.html
+++ b/sendCoupon.html
@@ -71,7 +71,7 @@
         <!-- Main Content 2-Column Layout -->
         <div class="row">
             <!-- Left Column -->
-            <div class="col-md-7">
+            <div class="col-md-7 d-flex flex-column">
                 <!-- 상품 정보 조회 -->
                 <div class="card mb-4">
                     <div class="card-title">상품 정보 조회</div>
@@ -95,7 +95,7 @@
                 </div>
 
                 <!-- 발송항목 입력 -->
-                <div class="card mb-4">
+                <div class="card mb-4 flex-grow-1">
                     <div class="card-title">발송항목 입력</div>
                     <div class="row g-3 align-items-center">
                         <div class="col-md-2"><label for="mmsTitle" class="form-label">제목</label></div>
@@ -106,7 +106,7 @@
 
                         <div class="col-md-2"><label for="mmsContent" class="form-label">내용</label></div>
                         <div class="col-md-10">
-                            <textarea id="mmsContent" class="form-control" rows="5" placeholder="메시지 내용을 입력하세요. (200자이내)" maxlength="200"></textarea>
+                            <textarea id="mmsContent" class="form-control" rows="7" placeholder="메시지 내용을 입력하세요. (200자이내)" maxlength="200"></textarea>
                             <div id="mmsContent-feedback" class="form-text text-muted text-end"></div>
                         </div>
 
@@ -132,17 +132,82 @@
                 <!-- MMS 이미지 미리보기 -->
                 <div class="card">
                     <div class="card-title">MMS 이미지 미리보기</div>
-                    <div class="d-flex justify-content-center align-items-center p-3" style="background-color: #f8f9fa;">
-                        <img src="images/sample-mms.png" alt="MMS 미리보기" class="img-fluid" style="max-height: 400px; object-fit: contain;">
+                    <div class="d-flex justify-content-center align-items-center p-3" style="background-color: #f8f9fa; min-height: 450px;">
+                        <img src="images/sample-mms.png" alt="MMS 미리보기" class="img-fluid" style="max-height: 400px; object-fit: contain; border: 1px solid #dee2e6;">
+                    </div>
+                </div>
+
+                <!-- 수신자 정보 등록 -->
+                <div class="card mt-4">
+                    <div class="card-title">수신자 정보 등록</div>
+                    <ul class="nav nav-tabs" id="recipient-tabs" role="tablist">
+                        <li class="nav-item" role="presentation">
+                            <button class="nav-link active" id="simple-reg-tab" data-bs-toggle="tab" data-bs-target="#simple-reg-panel" type="button" role="tab" aria-controls="simple-reg-panel" aria-selected="true">간편등록</button>
+                        </li>
+                        <li class="nav-item" role="presentation">
+                            <button class="nav-link" id="bulk-reg-tab" data-bs-toggle="tab" data-bs-target="#bulk-reg-panel" type="button" role="tab" aria-controls="bulk-reg-panel" aria-selected="false">대량등록(엑셀)</button>
+                        </li>
+                    </ul>
+                    <div class="tab-content pt-3" id="recipient-tabs-content">
+                        <div class="tab-pane fade show active" id="simple-reg-panel" role="tabpanel" aria-labelledby="simple-reg-tab">
+                            <div class="form-check mb-2">
+                                <input class="form-check-input" type="checkbox" value="" id="simpleRegCheck" checked disabled>
+                                <label class="form-check-label" for="simpleRegCheck">
+                                    휴대폰 번호를 한 줄에 한 개씩 숫자만 입력하세요.<br> (최대 100건)
+                                </label>
+                            </div>
+                            <div class="d-flex justify-content-end mb-2">
+                                <button class="btn btn-sm btn-outline-secondary" id="resetSimpleRegBtn"><i class="fa-solid fa-times me-1"></i> 초기화</button>
+                            </div>
+                            <div class="input-group">
+                                <div id="recipientLineNumbers" class="form-control text-end" style="flex: 0 0 45px; background-color: #f8f9fa; overflow-y: hidden; border-right: none; padding-right: 5px; user-select: none;"></div>
+                                <textarea id="recipientList" class="form-control" rows="8" placeholder="01012345678" style="border-radius: 0;"></textarea>
+                                <div id="recipientValidation" class="form-control text-center" style="flex: 0 0 40px; background-color: #f8f9fa; overflow-y: hidden; border-left: none; user-select: none;"></div>
+                            </div>
+                            <div id="recipientCount" class="form-text text-muted text-end mt-1">0 / 100건</div>
+                        </div>
+                        <div class="tab-pane fade" id="bulk-reg-panel" role="tabpanel" aria-labelledby="bulk-reg-tab">
+                            <div class="form-check mb-2">
+                                <input class="form-check-input" type="checkbox" value="" id="bulkRegCheck" checked disabled>
+                                <label class="form-check-label" for="bulkRegCheck">
+                                    최대 20,000건까지만 입력이 가능합니다.
+                                </label>
+                            </div>
+                            <div class="d-flex justify-content-end mb-2">
+                                <button class="btn btn-sm btn-outline-secondary" id="downloadSampleBtn"><i class="fa-solid fa-download me-1"></i> 샘플 엑셀 파일 다운로드</button>
+                            </div>
+                            <div style="min-height: 230px;"> <!-- 높이 유지를 위한 컨테이너 -->
+                                <div class="input-group mb-2">
+                                    <input type="file" class="form-control" id="excelFileInput" accept=".xlsx, .xls">
+                                    <button class="btn btn-outline-secondary" type="button" id="resetExcelFileBtn" title="선택한 파일 초기화"><i class="fa-solid fa-times"></i></button>
+                                </div>
+                                <div class="table-responsive" id="excelPreviewContainer" style="height: 190px; display: none;">
+                                    <table class="table table-striped table-sm table-hover">
+                                        <thead class="table-light">
+                                            <tr><th>#</th><th>휴대폰 번호</th></tr>
+                                        </thead>
+                                        <tbody id="excelPreviewBody"></tbody>
+                                    </table>
+                                </div>
+                            </div>
+                            <div id="excelRecipientCount" class="form-text text-muted text-end mt-1">총 0건</div>
+                        </div>
                     </div>
                 </div>
             </div>
+        </div>
+
+        <!-- Action Buttons -->
+        <div class="d-flex justify-content-center mt-5">
+            <button type="button" class="btn btn-primary btn-lg me-3 px-5" id="sendBtn">저장/발송</button>
+            <button type="button" class="btn btn-secondary btn-lg px-5" id="cancelBtn">취소</button>
         </div>
 
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
     <script src="https://npmcdn.com/flatpickr/dist/l10n/ko.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
     <script src="js/main.js"></script>
 
     <!-- Product Search Modal -->
