--- a/sendQuery.html
+++ b/sendQuery.html
@@ -61,13 +61,12 @@
         <!-- 조회 결과 -->
         <div class="card">
             <div class="card-title d-flex justify-content-between align-items-center">
-                <span>조회 결과</span>
+                <span id="totalResults">조회 결과</span>
                 <div class="d-flex align-items-center">
                     <div class="input-group input-group-sm me-3" style="width: 200px;">
                         <input type="text" id="tableSearchInput" class="form-control" placeholder="표 내부 검색...">
                         <button class="btn btn-outline-secondary clear-input-btn" type="button" style="display: none;"><i class="fas fa-times"></i></button>
                     </div>
-                    <span id="totalResults" class="fs-6 fw-normal text-nowrap">총 0건</span>
                 </div>
             </div>
             <div class="table-responsive">
@@ -113,10 +112,9 @@
                 <div class="modal-body" id="detailModalBody">
                     <div class="d-flex justify-content-end mb-3">
                         <div class="input-group input-group-sm me-2" style="width: 200px;">
-                            <input type="text" id="detailModalSearchInput" class="form-control" placeholder="수신자/쿠폰번호 검색...">
+                            <input type="text" id="detailModalSearchInput" class="form-control" placeholder="쿠폰번호 검색...">
                             <button class="btn btn-outline-secondary clear-input-btn" type="button" style="display: none;"><i class="fas fa-times"></i></button>
                         </div>
-                        <span id="detailTotalResults" class="fs-6 fw-normal text-nowrap me-3">총 0건</span>
                         <button type="button" class="btn btn-success btn-sm" id="detailExcelDownloadBtn"><i class="fas fa-download me-1"></i>엑셀 내려받기</button>
                     </div>
                     <div class="table-responsive" id="detailScrollContainer" style="height: 40vh; overflow-y: auto;">
@@ -280,8 +278,8 @@
                 }
 
                 // 총 건수는 필터링된 전체 데이터 기준
-                const totalCount = (tableSearchInput.value ? displayedResults : currentResults).length;
-                totalResultsEl.textContent = `총 ${totalCount}건`;
+                const totalCount = displayedResults.length;
+                totalResultsEl.textContent = `조회 결과 (${tableBody.children.length} / ${totalCount}건)`;
             };
 
             // 정렬 함수
@@ -443,7 +441,7 @@
                     `;
                 }).join('');
                 detailModalTableBody.innerHTML += rowsHtml;
-                detailTotalResults.textContent = `총 ${displayedDetailData.length}건`;
+                detailModalLabel.textContent = `[${masterData.client}] ${masterData.event} (${detailModalTableBody.children.length} / ${displayedDetailData.length}건)`;
             };
 
             // 모달 내 추가 데이터 로드 함수
@@ -471,7 +469,7 @@
                 masterData = { ...itemData }; // 마스터 데이터 복사
 
                 // 모달 제목 설정
-                detailModalLabel.textContent = `[${itemData.client}] ${itemData.event}`;
+                detailModalLabel.textContent = `[${itemData.client}] ${itemData.event} (0 / ${itemData.quantity}건)`;
                 detailModalSearchInput.value = ''; // 검색창 초기화
 
                 // 가상의 개별 쿠폰 데이터 생성
